# apis-instance-oebl-pfp

./: .gitignore  LICENSE  README.md  apis_acdhch_default_settings  apis_core  dumprels.py  gunicorn.config.py  manage.py  migrationscript.py  pyproject.toml
.github/: auto-deploy-values.yaml  dependabot.yml
.github/workflows/: deploy.yml  renovate.yml  ruff-format.yml  ruff-formatter.yml  ruff-linter.yml
apis_ontology/: admin.py  api_views.py  apps.py  autocomplete.py  filters.py  filtersets.py  forms.py  importers.py  models.py  querysets.py  renderer.py  serializers.py  settings.py  signals.py  tables.py  test_rdfimport.py  urls.py  views.py
apis_ontology/migrations/: 0001_initial.py  0002_alter_event_status_alter_institution_status_and_more.py  0003_alter_event_kind_alter_institution_kind_and_more.py  0004_remove_person_profession_profession_and_more.py  0005_source.py  0006_source_content_type_source_object_id.py  0007_alter_source_content_type_alter_source_object_id.py  0008_alter_source_content_type_alter_source_object_id.py  0009_text.py  0010_alter_text_kind.py  0011_historicalwork_historicaltitle_historicaltext_and_more.py  0011_unaccent_20231214_0830.py  0012_professioncategory_alter_profession_options_and_more.py  0014_trigram.py  0015_event_name_institution_name_person_name_place_name_and_more.py  0016_rename_name_person_surname.py  0017_rename_lat_place_latitude_rename_lng_place_longitude.py  0018_rename_name_place_label.py  0019_person_external_resources.py  0020_alter_text_kind.py  0021_dedomination.py  0021_parentprofession.py  0022_merge_0021_dedomination_0021_parentprofession.py  0023_alter_dedomination_options_person_profession_father_and_more.py  0024_alter_place_label_alter_place_latitude_and_more.py  0025_rename_dedomination_denomination.py  0026_remove_event_published_remove_event_review_and_more.py  0027_person_adelspraedikat_and_more.py  0028_delete_text.py  0029_remove_event_references_and_more.py  0030_rename_first_name_person_forename.py  0031_versionperson_versionperson_title_and_more.py  0032_alter_denomination_options_alter_event_options_and_more.py  0033_alter_person_adelspraedikat_alter_person_religionen_and_more.py  0034_alter_person_berufe_and_more.py  0035_versionwork_versionplace_versioninstitution_and_more.py  0036_source_pdf_filename.py  0037_alter_event_notes_alter_institution_notes_and_more.py  0038_person_alternative_names_and_more.py  0039_alter_person_professioncategory.py  (+29 more)
apis_ontology/rdfconfigs/: event.py  institution.py  person.py  prize.py  profession.py
apis_ontology/rdfimport/: EventFromDNB.toml  InstitutionFromDNB.toml  (+11 more)
data/: annotations_oebl_export_10-2023.csv  highlighter_projects_oebl_export_10-2023.csv.csv
oebl/: admin.py  api_views.py  apps.py  filtersets.py  forms.py  importers.py  models.py  querysets.py  settings.py  tables.py  urls.py
startup/: 100-gunicorn
(+84 files in other folders)
