[tool.poetry]
name = "apis-instance-oebl-pnp"
version = "0.1.0"
description = "APIS instance OEBL"
authors = ["Birger Schacht <birger.schacht@oeaw.ac.at>"]
license = "MIT"
packages = [{include = "apis_ontology"}]


[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9"
apis-core-rdf = "0.36.0"
apis-highlighter-ng = "^0.5.0"
apis-acdhch-default-settings = "1.8.0"
django-auditlog = "^3.0.0"
apis-acdhch-django-auditlog = "^0.2.0"
django-json-editor-field = "^0.4.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
