[tool.poetry]
name = "apis-instance-oebl-pnp"
version = "0.1.0"
description = "APIS instance OEBL"
authors = ["Birger Schacht <birger.schacht@oeaw.ac.at>"]
license = "MIT"
packages = [{include = "apis_ontology"}]


[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9"
apis-core-rdf = "0.41.1"
apis-highlighter-ng = "^0.5.0"
apis-acdhch-default-settings = "2.4.0"
django-auditlog = "^3.0.0"
apis-acdhch-django-auditlog = "^0.2.0"
django-json-editor-field = "^0.4.0"
django-interval = "^0.5.0"
apis-bibsonomy = "^0.13.1"

[tool.poetry.group.dev]
optional = true
[tool.poetry.group.dev.dependencies]
djlint = "^1.31.1"
ruff = ">=0.5.0,<0.12.0"
deptry = ">=0.12,<0.24"

[tool.djlint]
indent=2
profile="django"
extension="html"
blank_line_before_tag="block"
blank_line_after_tag="endblock"
format_js=false

[tool.ruff]
lint.select = ["E4", "E7", "E9", "F", "I"]
lint.ignore = ["E501", "F403"]
lint.isort.known-first-party = ["apis_core"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
