[project]
name = "apis-instance-oebl-pnp"
version = "0.1.0"
description = "APIS instance OEBL"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Birger Schacht", email = "birger.schacht@oeaw.ac.at" }]
license = "MIT"
dependencies = [
    "psycopg2>=2.9,<3.0",
    "apis-core-rdf==0.55.0",
    "apis-highlighter-ng==0.6.3",
    "apis-acdhch-default-settings==2.13.0",
    "django-auditlog>=3.0.0,<4.0",
    "apis-acdhch-django-auditlog==0.2.1",
    "django-json-editor-field==0.4.2",
    "django-interval==0.5.1",
    "apis-bibsonomy==0.13.2",
]

[dependency-groups]
dev = [
    "djlint==1.36.4",
    "ruff>=0.5.0,<0.12.0",
    "deptry>=0.12,<0.24",
]

[tool.djlint]
indent=2
profile="django"
extension="html"
blank_line_before_tag="block"
blank_line_after_tag="endblock"
format_js=false

[tool.ruff]
lint.select = ["E4", "E7", "E9", "F", "I"]
lint.ignore = ["E501", "F403"]
lint.isort.known-first-party = ["apis_core"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apis_ontology"]
